--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: jiang718's Blog
 email: jiang718@umn.edu
 description: >- # this means to ignore newlines until "baseurl:"
     Welcome to my blog!
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jiang718 
 github_username: jiang718 
